--- a/intro.ipynb
+++ b/intro.ipynb
@@ -11,10 +11,15 @@
     "2. ER Model (Entity Relational Model)\n",
     "    a. different types of attributes, different types of relationships (one to one, one to many, many to many)\n",
     "3. Basics of Keys\n",
+    "    a. what are Primary key, Candidiate key, foreign key, super key and their characteristics\n",
     "4. Normalisation\n",
+    "    a. Closure method, functional dependencies, 1st to 3rd Normal form. BCNF (Boyce Codd Normal Form)\n",
     "5. Transaction control and concurrency management\n",
+    "    a. ACID Properties, RW,RR,WR Problems (Read Write), Conflict Serializability, Recoverability, 2 Phase Locking protocol and time stamp ordering protocol\n",
     "6. SQL and Relational Algebra\n",
-    "7. Indexing"
+    "    a. DDL, DQL, DML, DCL and TCL Commands (https://www.geeksforgeeks.org/sql-ddl-dql-dml-dcl-tcl-commands/), JOIN commands, Nested Query Operations, Aggregate Operations\n",
+    "7. Indexing\n",
+    "    \n"
    ]
   }
  ],
