2 and 3 tier architecture

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -52,6 +52,7 @@
     "2. We can extract the files without the knowledge of metadata or location\n",
     "3. DBMS can handle concurrency due to their specified protocols\n",
     "4. DBMS is better in terms of security having role based security\n",
+    "5. Data redudancy is handled better in DBMS using keys \n",
     "\n"
    ]
   }
