2 and 3 tier architecture

--- a/dbms_notes.ipynb
+++ b/dbms_notes.ipynb
@@ -17,6 +17,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "2 tier architectures:\n",
+    "\n",
+    "* It has 2 layers. one is client layer another is server/database layer\n",
+    "* These kind of databases are easy to maintain\n",
+    "* But these are not scalable and has potential security issues due to direct interaction of clients with databases\n",
+    "\n",
+    "\n",
+    "\n",
+    "3 tier architectures\n",
+    "\n",
+    "* It introduces a new layer that is application layer or business layer that interfaces both client and server layer. When the client is requesting something it will be processed by the application layer and then it will go to server layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
